fix: remove whitespace on sides

--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,24 @@ html{
     scroll-behavior: smooth;
 }
 
-.body{
+.wrapped{
     max-width: 1280px;
     margin: 0 auto;
+}
+    
+.gradient{
+    background: url("./../assets/img/noise.png"),
+    radial-gradient(100% 215.42% at 0% 0%, #5b483a 0%, #262425 100%), #131212;
+}
+
+.gray-bg{
+    background-color: #F6F6F6;
 }
 
 .start-page {
     width: 1280px;
     height: 908px;
-    background-image: url(./../assets/img/start-screen-gradient-background.png);
+    /*background-image: url(./../assets/img/start-screen-gradient-background.png);*/
 }
 
 .start-page_header {
